
Libraries 8.x-3.x, xxxx-xx-xx
-----------------------------
#2309203 by JayeshSolanki: Replace removed functions with module handler service.
#2290767 by yukare: Replace removed cache() function.
#2183087 by tstoeckler, rjacobs: Update for removed core functions.
by tstoeckler: Fix tests.
by tstoeckler: Provide required 'type' key in test library info file.
#2090351 by tstoeckler: Remove obsolete hook_flush_caches().
#2090425 by tstoeckler: Adapt for renamed ControllerInterface.
#2090323 by tstoeckler: Remove obsolete libraries_parse_dependency().
#2090379 by tstoeckler: Change 'pattern' to 'path' in routing YAML file.
#2058371 by gordon: Re-port to Drupal 8 (.info.yml, controllers, cache service, ...).
#1779714 by tstoeckler, klonos: Wrong filepath in README.txt and fix JS testing.
#1167496 by tstoeckler: Remove leftover libraries.test file.
#1167496 by tstoeckler, benshell: Port to Drupal 8.


Libraries 7.x-3.x, xxxx-xx-xx
-----------------------------
#1938638 by tstoeckler: Remove unneeded check.


Libraries 7.x-2.x, xxxx-xx-xx
-----------------------------
#2046919 by tstoeckler: Improve documentation around 'version callback'.
#1844272 by tstoeckler, jweowu: Fix typos in libraries.api.php.
#1938638 by tstoeckler: Prevent weird PHP notice on update.
#1329388 by RobLoach, tstoeckler: Clear static caches in libraries_flush_caches().
#1855918 by rbayliss: Load integration files after library files.
#1938638 by Pol: Fix typo in libraries.api.php.

Libraries 7.x-2.1, 2013-03-09
-----------------------------
#1937446 by Pol, tstoeckler: Add a 'pre-dependencies-load' callback group.
#1775668 by tstoeckler: Fix bogus assertion message in assertLibraryFiles().
#1773640 by tstoeckler: Use drupal_get_path() to find the profile directory.
#1565426 by tstoeckler: Invoke hook_libraries_info() in enabled themes.

Libraries 7.x-2.0, 2012-07-29
-----------------------------
#1606018 by chemical: Tests fail if the module is downloaded from Drupal.org.